Update project name, title, metadata

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="utf-8"/>
-        <title>Hello World!</title>
+        <title>Justin Lovinger - Machine Learning - Full Stack Web Developer</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
