Normalize css and checkbox
The `input[type=checkbox]` element cannot be directly styled,
so we created a `Checkbox` component
that can be styled.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css">
+
         <style id="styleroot"></style>
 
         <script src="index.js" defer></script>
