Improve on mobile
* Increase filter spacing
  for easier tapping.
* Improve SEO
* Add minimum horizontal space to headings
* Increase contact options spacing
  for easier touch.
* Disable dynamic circles based on position instead of events
  The event approach does not work for touch devices.
  There is no `touchenter` or `touchleave` event.
* Improve performance of DynamicCircles
* Track touch events in addition to mouse for dynamic circles
* Fix scroll down indicator on Android Chrome
  The top bar pushed the content down,
  so the bottom of the view
  wasn't the bottom of the introduction.
* Pad timeline
* Fix cut off super-category checkbox

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
     <head>
         <meta charset="utf-8"/>
         <title>Justin Lovinger - Machine Learning - Full Stack Web Developer</title>
+        <meta name=description content="See the works of a machine learning expert and full stack web devloper, with several projects and many academic papers."</>
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
